# BSU

./: .gitignore  README.md
Algorithms and Data Structures/Dynamic Programming/Andrey is playing dice/: Main.cpp  README.md
Algorithms and Data Structures/Dynamic Programming/String transformation/: README.md
Algorithms and Data Structures/Graphs/Adjacency_Matrix/: README.md  Task_Description.txt
C#/anagrams/: Anagrams.sln
C#/binary-search/: BinarySearch.sln
C#/darts-game/: DartsGame.sln
C#/exceptions/: Exceptions.sln  README.md
C#/fancy-calc6/: README-RU.md  README.md
C#/filter-by-palindromic/: FilterByPalindromic.sln
C#/find-balance-element/: FindBalanceElement.sln
C#/find-maximum/: FindMaximum.sln
C#/hello-world/: HelloWorld.sln  README-RU.md  README.md
C#/hello-world6/: HelloWorld.sln
C#/if-else-statements/: README.md
C#/if-statements/: IfStatements.sln  README.md
C#/insertion-sort6/: README.md
C#/integer-memory-dump/: BinaryRepresentation.sln  README.md
C#/integers/: .editorconfig  Integers.sln  convert-numbers.md
C#/language-game/: LanguageGame.sln  README.md
C#/lou-vui-date-code6/: README.md
C#/morse-code-translator/: MorseCodeTranslator.sln  README.md
C#/numeric-conversions6/: NumericConversions.sln  README.md
C#/population/: Population.sln
C#/recursion-index-of-char6/: README.md
C#/recursion-looking-for-chars/: LookingForChars.sln  README.md
C#/recursion-palindromic-number/: .gitignore  PalindromicNumber.sln
C#/recursion-shift-array-elements6/: ShiftArrayElementsRecursion.sln
C#/relocation-elements/: RelocationElements.sln
C#/search-by-pattern-in-text6/: SearchPatternInText.sln
C#/spiral-matrix/: README.md  SpiralMatrix.sln
C#/static-methods/: README.md  StaticMethods.sln  code-analysis.ruleset
C#/static-methods-compiler-errors/: CompilerErrors.sln
C#/streams/: Streams.sln
C#/style-issues/: README-RU.md  README.md
C#/transform-to-words/: TransformToWords.sln
C#/transformer-to-words/: README.md  TransformerToWords.sln
C#/type-of-sequence6/: README.md
C#/while-practice/: README.md  WhilePractice.sln
C++/Learning_CPP/: ModernCppPlayground.cpp
C++/Operating-Systems/LW5_Data_Exchange_via_Named_Channels/: CMakeLists.txt  employee.h
C++/Projects/Clock/QtGUI/ClockGUI/: AlarmItemWidget.cpp  AlarmItemWidget.h  CMakeLists.txt  alarms.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.json  resources.qrc  style.css
C++/Projects/FractionCalculator/FractionCalculator/: CMakeLists.txt  Fraction.cpp  Fraction.h  FractionCalculator.vcxproj  FractionCalculator.vcxproj.filters  FractionTest.cpp  input.txt  main.cpp  output.txt
C++/Projects/FractionCalculator/FractionCalculator/x64/Debug/: FractionCalculator.exe.recipe  FractionCalculator.ilk  FractionCalculator.vcxproj.FileListAbsolute.txt  std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command  vc143.idb
C++/Projects/FractionCalculator/FractionCalculator/x64/Debug/Fraction.126c3e50.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FractionCalculator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C++/Projects/FractionCalculator/FractionCalculator/x64/Debug/Fraction.9e46f2c2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C++/Projects/FractionCalculator/QtGUI/FractionCalculatorGUI/: CMakeLists.txt  ExpressionLineEdit.cpp  ExpressionLineEdit.h  ExpressionParser.cpp  ExpressionParser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  style.css
C++/Projects/Notes/QtGUI/NotesGUI/: CMakeLists.txt  NoteItemWidget.cpp  NoteItemWidget.h  TaskItemWidget.cpp  TaskItemWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.json  style.css  tasks.json
C++/Projects/Tweaker/Tweaker/: CMakeLists.txt  README.md  RamLabel.cpp  RamLabel.h  easy.reg  expert.reg  hard.reg  mainwindow.cpp  mainwindow.h  mainwindow.ui  medium.reg  resources.qrc  resources.rc  style.css
C++/Projects/Tweaker/Tweaker/tweaker-release/: easy.reg  expert.reg  hard.reg  medium.reg  style.css
Java/LW_Karpovich/: README.md
Java/Project_League_Of_Champions/: ClassBD.java  Game.txt  GroupData.java  Groups.txt  GroupsOut.txt  Main.java  Match.java  README.md  Results.txt  Team.java
Java/WeightConverterApp/: .gitignore  file-system.probe  settings.gradle
Java/WeightConverterApp/Operating-Systems/LW4_Synchronizing_Processes/: CMakeLists.txt
Java/Сквозная работа/: CompressionZip.java  FileHandler.java  JsonFileHandler.java  JsonFileHandlerTest.java  JsonHandler.java  MainApp.java  MathOperationJsonParser.java  MathOperationTextParser.java  MathOperationXmlParser.java  README.md  TextFileHandler.java  TextFileHandlerTest.java  TextFileParser.java  XmlFileHandler.java  XmlFileHandlerTest.java  XmlFileParser.java  XmlHandler.java  ZipHandler.java  input.json  output.json  output.xml  output_extracted.txt  output_extracted1.txt  pom.xml
Operating-Systems/: README.md
Operating-Systems/Colloquium3_23_11_2023/: Task1.cpp  Task_Description.txt
Operating-Systems/LW1_Creating_Processes/: CMakeLists.txt  Creator_Boost.cpp  Difference_between_Boost_and_without.txt  Reporter_Boost.cpp  Task_Description.txt  employee.h
Operating-Systems/LW2_Creating_Threads/: Difference_between_c++98_and_c++11.txt  Differences_Boost_and_without.txt  Main.cpp  MainTests.cpp  Task_Description.txt
Operating-Systems/LW3_Synchronizing_Threads/: CMakeLists.txt  Differences_Boost_and_without.txt  Main.cpp  Main.h  Task_Description.txt
Operating-Systems/LW4_Synchronizing_Processes/: Main.cpp  Main.h  Main_c++98.cpp  README.md  Task_Description.txt
Operating-Systems/LW5_Data_Exchange_via_Named_Channels/: Client.cpp  README.md  Server.cpp  tz.txt
Optimal control/Insulin therapy/: Hovorka.m  README.md
buildOutputCleanup/: cache.properties
(+566 files in other folders)
